--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
 }
